--- a/informativoSegurancaSenha.html
+++ b/informativoSegurancaSenha.html
@@ -179,7 +179,7 @@
 	  <p>DTI- Diretoria de Tecnologia da Informação</p>
 	  <p>(71)3115-7298</p>
 	  <p>dti@alba.ba.gov.br</p>
-	  <img src="https://i.imgur.com/djP6Wfo.jpg"  class="img-fluid" width="100%" />
+	  <img src="https://i.imgur.com/C6QxKBb.jpg"  class="img-fluid" width="100%" />
 	</div>
 	
 	
